[package]
name = "progress_string"
version = "0.2.0"
authors = ["FreeMasen"]
description = "Generate a progress bar string"
repository = "https://github.com/freemasen/progress_string"
documentation = "https://docs.rs/crate/progress_string"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]

[target.'cfg(unix)'.dev-dependencies]
termion = "1.0"
